--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             <li><a class="smoothscroll" href="#portfolio">Works</a></li>
          <!--   <li><a class="smoothscroll" href="#testimonials">Testimonials</a></li> -->
             <li><a class="smoothscroll" href="#contact">Contact</a></li>
+            <li><a class="smoothscroll" href="#about">Download Resume</a></li>
          </ul> <!-- end #nav -->
 
       </nav> <!-- end #nav-wrap -->
@@ -135,7 +136,7 @@
 
                <div class="columns download">
                   <p>
-                     <a href="https://drive.google.com/file/d/1Mgx0sNKZYRzVGzxMZtwBC6WHDAagl0PP/view?usp=sharing" class="button"><i class="fa fa-download"></i>Download Resume</a>
+                     <a href="https://drive.google.com/file/d/1_R7R2n7E3tSVUpv1c1yW8Hptn_TmhvbW/view?usp=sharing" class="button"><i class="fa fa-download"></i>Download Resume</a>
                   </p>
                </div>
 
@@ -209,6 +210,7 @@
 
          <div class="three columns header-col">
             <h1><span>Work</span></h1>
+            <h1>Technical Experience</h1>
          </div>
 
          <div class="nine columns main-col">
@@ -216,6 +218,7 @@
             <div class="row item">
 
                <div class="twelve columns">
+                  
 
                   <h3>Northeastern University (Housing Systems)</h3>
                   <p class="info">Graduate Assistant<span>&bull;</span> <em class="date">November 2022 - August 2023</em></p>
@@ -246,16 +249,6 @@
                       </ul>             
                   </p>
 
-                  <h3>Self Employed</h3>
-                  <p class="info">Mathematics & Science<span>&bull;</span> <em class="date">February 2018 - September 2019</em></p>
-
-                  <p>
-                     <ul>
-                        <li>Delivered Mathematics instruction to high school students, with a strong focus on practical application skills.</li>
-                        <li>Conducted comprehensive sessions for clarifying doubts, spanning Mathematics, Physics, Chemistry, and English subjects.</li>
-                        <li>Created innovative frameworks and strategies rooted in psychology principles, enabling effective memorization of extensive study materials across various subjects and topics.</li>
-                      </ul>                                 
-                  </p>
 
                   <h3>CamCom Technologies Pvt Ltd</h3>
                   <p class="info">Data & Software<span>&bull;</span> <em class="date">June 2018 - September 2018</em></p>
@@ -282,19 +275,7 @@
                         <li>Designed and implemented front-end features for ticketing systems using BMC Remedy components.</li>
                         <li>Enhanced operational efficiency by streamlining shipment processes, including failed shipments and analysis, through comprehensive exploratory analysis using SQL, Excel, and automation techniques.</li>
                       </ul>                                         
-                  </p>
-
-
-                  <h3>BASE Educational Services Pvt Ltd</h3>
-                  <p class="info">Mathematics Faculty<span>&bull;</span> <em class="date">February 2015 - April 2016</em></p>
-
-                  <p>
-                     <ul>
-                        <li>Taught Mathematics to over 150 FSnT program students, emphasizing foundational concepts and their practical applications in academic studies and competitive exams. Created innovative resources for NSkill coursework.</li>
-                        <li>Mentored and provided guidance to students, fostering valuable faculty-student connections.</li>
-                        <li>Organized regular Parent-Teacher meetings and personalized self-study strategies to align with individual student learning styles and schedules.</li>
-                    </ul>                                        
-                  </p>
+                  </p>  
 
                </div>
 
@@ -308,13 +289,46 @@
                   <p class="info">Student Researcher<span>&bull;</span> <em class="date">February 2015 - October 2015</em></p>
 
                   <p>
-                     Designed and implemented a Multilayer Neural Network to apply the 
+                     Designed and implemented a Multilayer Neural Networks to apply the 
                      Backpropagation Algorithm (Deep Learning ML) for modeling Adaptive Control Nonlinear Systems' Transient Response.
                   </p>
 
                </div>
 
             </div> <!-- item end -->
+         </div>
+
+         <div class="three columns header-col">
+            <h1>Other Experience</h1>
+         </div>
+
+            <div class="nine columns main-col">
+               <div class="row item">
+                  <div class="twelve columns">
+            <h3>Self Employed</h3>
+                  <p class="info">Mathematics & Science<span>&bull;</span> <em class="date">February 2018 - September 2019</em></p>
+
+                  <p>
+                     <ul>
+                        <li>Delivered Mathematics instruction to high school students, with a strong focus on practical application skills.</li>
+                        <li>Conducted comprehensive sessions for clarifying doubts, spanning Mathematics, Physics, Chemistry, and English subjects.</li>
+                        <li>Created innovative frameworks and strategies rooted in psychology principles, enabling effective memorization of extensive study materials across various subjects and topics.</li>
+                      </ul>                                 
+                  </p>
+
+
+                  <h3>BASE Educational Services Pvt Ltd</h3>
+                  <p class="info">Mathematics Faculty<span>&bull;</span> <em class="date">February 2015 - April 2016</em></p>
+
+                  <p>
+                     <ul>
+                        <li>Taught Mathematics to over 150 FSnT program students, emphasizing foundational concepts and their practical applications in academic studies and competitive exams. Created innovative resources for NSkill coursework.</li>
+                        <li>Mentored and provided guidance to students, fostering valuable faculty-student connections.</li>
+                        <li>Organized regular Parent-Teacher meetings and personalized self-study strategies to align with individual student learning styles and schedules.</li>
+                    </ul>                                        
+                  </p>
+               </div>
+            </div>         
 
          </div> <!-- main-col end -->
 
