--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
       <div class="row banner">
          <div class="banner-text">
-            <h1 class="responsive-headline">I'm Nagashree Seshadri.</h1>
+            <h1 class="responsive-headline">Hello! I'm Nagashree Seshadri.</h1>
             <h3>Versatile problem solver skilled in data and software. I'm currently pursuing a Masters in Information Systems and set to graduate in December 2023. 
                Passionate about crafting innovative solutions and driving impact in software, data, and product roles. Feel free to <a class="smoothscroll" href="#about">navigate to a section</a>
             to know more <a class="smoothscroll" href="#about">about me</a>.</h3>
